--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,2 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
+<table border="1">
+<tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
+<tr bgcolor="bf9d74">  <td>20/02/22 14:20:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openBrowser()[pri:0, instance:org.techAltum.com.TC01@f4168b8]">&gt;&gt;openBrowser</td> 
+<td>&nbsp;</td>  <td>main@252651381</td>   <td></td> </tr>
+<tr bgcolor="63c468">  <td>20/02/22 14:21:05</td>   <td>10555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.testCase01()[pri:0, instance:org.techAltum.com.TC01@f4168b8]">testCase01</td> 
+  <td>main@252651381</td>   <td></td> </tr>
+<tr bgcolor="bf9d74">  <td>20/02/22 14:21:50</td>   <td>55831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quitBrowser()[pri:0, instance:org.techAltum.com.TC01@f4168b8]">&lt;&lt;quitBrowser</td> 
+<td>&nbsp;</td>  <td>main@252651381</td>   <td></td> </tr>
 </table>
