Selenium Session 29 Feb

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\atyag\AppData\Local\Temp\testng-eclipse--1416811863\testng-customsuite.xml</span>
+                    <span>C:\Users\atyag\AppData\Local\Temp\testng-eclipse-396534464\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="org.techAltum.com.TC01" hash-for-method="testCase01">testCase01</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="seleniumPractice.TC03" hash-for-method="selectDatesFromCalendar">selectDatesFromCalendar</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">org.techAltum.com.TC01</span>
+              <span class="class-name">seleniumPractice.TC03</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testCase01">
-                  </a> <!-- testCase01 -->
-                  <span class="method-name">testCase01</span>
+                  <a name="selectDatesFromCalendar">
+                  </a> <!-- selectDatesFromCalendar -->
+                  <span class="method-name">selectDatesFromCalendar</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,16 +135,16 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\atyag\AppData\Local\Temp\testng-eclipse--1416811863\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\atyag\AppData\Local\Temp\testng-eclipse-396534464\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
+&lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;org.techAltum.com.TC01&quot;/&gt;
+      &lt;class name=&quot;seleniumPractice.TC03&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testCase01')
-data.setCell(0, 2, 'org.techAltum.com.TC01')
-data.setCell(0, 3, 45271);
+data.setCell(0, 1, 'selectDatesFromCalendar')
+data.setCell(0, 2, 'seleniumPractice.TC03')
+data.setCell(0, 3, 7099);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -204,6 +204,49 @@ return data;
             <span class="header-content">Reporter output for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">selectDatesFromCalendar</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Navigating to url = http://www.cheapoair.com</span>
+                <span class="reporter-method-output">Navigation is complete on url = http://www.cheapoair.com</span>
+                <span class="reporter-method-output">Text before find element is = </span>
+                <span class="reporter-method-output">Text before find element is = 1</span>
+                <span class="reporter-method-output">Text before find element is = 2</span>
+                <span class="reporter-method-output">Text before find element is = 3</span>
+                <span class="reporter-method-output">Text before find element is = 4</span>
+                <span class="reporter-method-output">Text before find element is = 5</span>
+                <span class="reporter-method-output">Text before find element is = 6</span>
+                <span class="reporter-method-output">Text before find element is = 1</span>
+                <span class="reporter-method-output">Text before find element is = 2</span>
+                <span class="reporter-method-output">Text before find element is = 3</span>
+                <span class="reporter-method-output">Text before find element is = 4</span>
+                <span class="reporter-method-output">Text before find element is = 5</span>
+                <span class="reporter-method-output">Text before find element is = 6</span>
+                <span class="reporter-method-output">Text before find element is = 7</span>
+                <span class="reporter-method-output">Text before find element is = 8</span>
+                <span class="reporter-method-output">Text before find element is = 9</span>
+                <span class="reporter-method-output">Text before find element is = 10</span>
+                <span class="reporter-method-output">Text before find element is = 11</span>
+                <span class="reporter-method-output">Text before find element is = 12</span>
+                <span class="reporter-method-output">Text before find element is = 13</span>
+                <span class="reporter-method-output">Text before find element is = 14</span>
+                <span class="reporter-method-output">Text before find element is = 15</span>
+                <span class="reporter-method-output">Text before find element is = 16</span>
+                <span class="reporter-method-output">Text before find element is = 17</span>
+                <span class="reporter-method-output">Text before find element is = 18</span>
+                <span class="reporter-method-output">Text before find element is = 19</span>
+                <span class="reporter-method-output">Text before find element is = 20</span>
+                <span class="reporter-method-output">Text before find element is = 21</span>
+                <span class="reporter-method-output">Text before find element is = 22</span>
+                <span class="reporter-method-output">Text before find element is = 23</span>
+                <span class="reporter-method-output">Text before find element is = 24</span>
+                <span class="reporter-method-output">Text before find element is = 25</span>
+                <span class="reporter-method-output">Text before find element is = 26</span>
+                <span class="reporter-method-output">Text before find element is = 27</span>
+                <span class="reporter-method-output">Text before find element is = 28</span>
+                <span class="reporter-method-output">Text before find element is = 29</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
@@ -219,18 +262,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">org.techAltum.com.TC01</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">seleniumPractice.TC03</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">openBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testCase01</span>
-                <span class="method-start">10555 ms</span>
+                <span class="method-name">selectDatesFromCalendar</span>
+                <span class="method-start">10305 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quitBrowser</span>
-                <span class="method-start">55830 ms</span>
+                <span class="method-start">17406 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
