--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,39 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>Navigating to url = http://www.cheapoair.com</td></tr>
+<tr><td>Navigation is complete on url = http://www.cheapoair.com</td></tr>
+<tr><td>Text before find element is = </td></tr>
+<tr><td>Text before find element is = 1</td></tr>
+<tr><td>Text before find element is = 2</td></tr>
+<tr><td>Text before find element is = 3</td></tr>
+<tr><td>Text before find element is = 4</td></tr>
+<tr><td>Text before find element is = 5</td></tr>
+<tr><td>Text before find element is = 6</td></tr>
+<tr><td>Text before find element is = 1</td></tr>
+<tr><td>Text before find element is = 2</td></tr>
+<tr><td>Text before find element is = 3</td></tr>
+<tr><td>Text before find element is = 4</td></tr>
+<tr><td>Text before find element is = 5</td></tr>
+<tr><td>Text before find element is = 6</td></tr>
+<tr><td>Text before find element is = 7</td></tr>
+<tr><td>Text before find element is = 8</td></tr>
+<tr><td>Text before find element is = 9</td></tr>
+<tr><td>Text before find element is = 10</td></tr>
+<tr><td>Text before find element is = 11</td></tr>
+<tr><td>Text before find element is = 12</td></tr>
+<tr><td>Text before find element is = 13</td></tr>
+<tr><td>Text before find element is = 14</td></tr>
+<tr><td>Text before find element is = 15</td></tr>
+<tr><td>Text before find element is = 16</td></tr>
+<tr><td>Text before find element is = 17</td></tr>
+<tr><td>Text before find element is = 18</td></tr>
+<tr><td>Text before find element is = 19</td></tr>
+<tr><td>Text before find element is = 20</td></tr>
+<tr><td>Text before find element is = 21</td></tr>
+<tr><td>Text before find element is = 22</td></tr>
+<tr><td>Text before find element is = 23</td></tr>
+<tr><td>Text before find element is = 24</td></tr>
+<tr><td>Text before find element is = 25</td></tr>
+<tr><td>Text before find element is = 26</td></tr>
+<tr><td>Text before find element is = 27</td></tr>
+<tr><td>Text before find element is = 28</td></tr>
+<tr><td>Text before find element is = 29</td></tr>
+</table>
